--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "yarn": "please-use-pnpm"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.24.0",
+    "@ant-design/icons": "^6.0.0",
+    "@ant-design/nextjs-registry": "^1.1.0",
+    "antd": "^5.26.7",
     "next": "14.2.31",
     "react": "^18",
     "react-dom": "^18"
