--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ant-design/nextjs-registry": "^1.1.0",
     "antd": "^5.26.7",
     "next": "14.2.31",
+    "next-intl": "^4.3.4",
     "react": "^18",
     "react-dom": "^18"
   },
